--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             } else if (team === 'team3') {
                 teamName.textContent = 'Team 3';
                  teamDescription.textContent = 'Description for Team 3';
-               
+               teamImage.src = 'https://github.com/daconme96/C14.html/blob/main/HDS.jpg?raw=true'; // Replace with the path to your image
+                teamImage2.src = 'https://github.com/daconme96/C14.html/blob/main/HDS.jpg?raw=true'; // Replace with the path to your image
                 
              } else if (team === 'team4') {
                 teamName.textContent = 'Team 4';
