--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id="content-section" class="hidden">
         <h2 id="team-name"></h2>
-        <img id="team-image" src="" alt="Team Image 1">
+        <img id="team-image" src="" alt="Team Image">
         <img id="team-image2" src="" alt="Team Image 2">
         <p id="team-description"></p>
     </div>
@@ -68,13 +68,13 @@
             } else if (team === 'team3') {
                 teamName.textContent = 'Team 3';
                  teamDescription.textContent = 'Description for Team 3';
-               teamImage.src = 'https://github.com/daconme96/C14.html/blob/main/HDS.jpg?raw=true'; // Replace with the path to your image
+                teamImage.src = 'https://github.com/daconme96/C14.html/blob/main/HDS.jpg?raw=true'; // Replace with the path to your image
                 teamImage2.src = 'https://github.com/daconme96/C14.html/blob/main/HDS.jpg?raw=true'; // Replace with the path to your image
                 
              } else if (team === 'team4') {
                 teamName.textContent = 'Team 4';
-                   teamDescription.textContent = 'Description for Team 4';
-               teamImage.src = 'https://github.com/daconme96/C14.html/blob/main/BRAIN.jpg?raw=true'; // Replace with the path to your image
+                teamDescription.textContent = 'Description for Team 4';
+                teamImage.src = 'https://github.com/daconme96/C14.html/blob/main/BRAIN.jpg?raw=true'; // Replace with the path to your image
              
             }
 
