--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             } else if (team === 'team3') {
                 teamName.textContent = 'Team 3';
                  teamDescription.textContent = 'Description for Team 3';
-               teamImage.src = 'https://github.com/daconme96/C14.html/blob/main/HDS.jpg?raw=true'; // Replace with the path to your image
+               teamImage.src = 'https://github.com/daconme96/C14.html/blob/main/piano.jpg?raw=true'; // Replace with the path to your image
                
                 
              } else if (team === 'team4') {
